# spectralDNS

./: .binstar.yml  .codacy.yml  .gitignore  .travis.yml  HDF5Writer.py  MPI_knee.py  Makefile  NS_shenfun.py  README.md  cached_import.py  circle.yml  commandline.py  config.py  create_profile.py  generate_xdmf.py  mpistrategy.txt  pylintrc  setup.py  spectralDNS.py  spectralDNS2D.py  spectralDNS2Drfft.py  spectralDNS3D.py  spectralDNS3D_3Decomp.py  spectralDNS3D_short.py  spectralDNS3Drfft.py  spectralDNSVV.py  spectralDNS_2D.py  spectralDNS_mpi.py  spectralMHD3D.py  wrappyfftw.py
.circleci/: config.yml  install_conda.sh
cbcdns/: __init__.py  __init__.py~  config.py  config.py~
cpp/: CMakeLists.txt  spectralDNS.cpp
demo/: Hartmann.py  Isotropic.py  KelvinHelmholtz.py  KelvinHelmoltzBoussinesq.py  LaminarChannel.py  MKM.py  MKM590.py  NS_shenfun.py  OrrSommerfeld.py  OrrSommerfeld.py~  OrrSommerfeldGeneralBCs.py  OrrSommerfeldGeneralBCs.py~  OrrSommerfeld_eig.py  OrrSommerfeld_shen.py  OrrSommerfeldr.py  RayleighBenard.py  TG.py  TG2D.py  TGMHD.py  Vortices.py  Vortices2D.py  pylintrc  refinement_test.py  test_all.py  vortices.txt
h5io/: HDF5Writer.py  __init__.py
mpi/: pencil.py  slab.py  wrappyfftw.py
problems/: __init__.py
sandbox/: Cheb.pyx  General_Matvec.pyx  General_Shen_Matrices.py  LinAlg.pyx  Matrices.py  Matvec.pyx  OrrSommerfeld_eig.py  SFTc.py  Shen_Matrices.py  Shen_Matvec.pyx  TDMA.pyx  cheb_biharmonic.py  cheb_cc_poisson.py  cheb_helmholtz_neumann_sft.py  cheb_helmholtz_sft.py  cheb_helmholtz_sft_nonhomo.py  cheb_poisson.py  leg_poisson.py  (+17 more)
(+244 files in other folders)
