cmake_minimum_required (VERSION 2.6)
project (spectralDNS)
set(FFTW_INC $ENV{FFTW3_INSTALL_DIR}/include)
set(FFTW_LIB $ENV{FFTW3_INSTALL_DIR}/lib)
include_directories(${FFTW_INC})
link_directories(${FFTW_LIB})
set(CMAKE_CXX_COMPILER mpicxx)
add_executable(spectralDNS spectralDNS.cpp)
target_link_libraries(spectralDNS fftw3 fftw3_mpi)
add_definitions("-std=c++11 -O3")
